--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
   <head>
-    <title>Kaleb Dickerson's Resume</title>
+    <title>Kaleb's Website</title>
   </head>
   <body>
-    <h2>Welcome to my resume</h2>
-    <p>You can view my resume <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a>.</p>
+    <h2>Welcome To My Website</h2>
+	Hello! My name is Kaleb Dickerson, and I am a 19 year old Chemical Engineering student at Texas A&M University.
+	You may notice this website is a little bit rough, but that is because I made it myself!
+	
+    <p>You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a>.</p>
+	This is all still a work in progress
+	<br>
+	<em>Last updated 05/10/20</em>
   </body>
 </html>
