--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	Hello! My name is Kaleb Dickerson, and I am a 19 year old Chemical Engineering student at Texas A&M University.
 	You may notice this website is a little bit rough, but that is because I made it myself!
 	
-    <p>You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a>.</p>
+    <p>You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a></p>
 	This is all still a work in progress
 	<br>
 	<em>Last updated 05/10/20</em>
