--- a/index.html
+++ b/index.html
@@ -1,15 +1,63 @@
 <html>
   <head>
     <title>Kaleb's Website</title>
+    <style type="text/css">
+        #grad1 {
+                height: 200px;
+                background-image: linear-gradient(to right, red , blue);
+                }
+        h2{
+            background-color: darkslategray;
+            padding: 15px;
+            border:3px solid darkgray;
+            color:white;
+            text-align:center;
+
+          }
+        p {
+            
+          }
+       img {
+                    border:2px solid darkgray;
+                    padding: 10px;
+                    background-color:lightgrey;
+              }   
+        .End{
+                    font-size: 8pt;
+                    padding: 5px;
+                    border:2px solid darkgray;
+                    background-color:darkslategray;
+                    color:white;
+            }
+        #Footer{
+                    position:absolute;
+                    bottom:0;
+
+                }
+    </style>
   </head>
-  <body>
-    <h2>Welcome To My Website</h2>
+  <body style="background-color:lightgray;">
+    <h2>Welcome To My Website!
+        <p>
+        <img src="https://lh3.googleusercontent.com/-RsuZiYwyAbM/AAAAAAAAAAI/AAAAAAAAAAA/M9AfPTlwps0/s128-c-k/photo.jpg" alt="Profile Picture" height="108" width="108">
+        </p>
+    </h2>
+    <p>
 	Hello! My name is Kaleb Dickerson, and I am a 19 year old Chemical Engineering student at Texas A&M University.
-	You may notice this website is a little bit rough, but that is because I made it myself!
-	
-    <p>You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a></p>
-	This is all still a work in progress
+    You may notice this website is a little bit rough, but that is because I made it myself!
+    </p>
+    Here is my contact info. Please feel free to contact me!
+    <ul>
+        <li>Phone number: (512)-801-1561</li>
+        <li>Email: Prometheus1400@gmail.com</li>
+    </ul>
+    <p>You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a>.</p>
+    <div id="Footer">
+    <p class="End">
+    This is all still a work in progress
 	<br>
-	<em>Last updated 05/10/20</em>
+    <em>Last updated 05/10/20</em>
+    </p>
+    </div>
   </body>
 </html>
