--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Kaleb's Website</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://github.com/Prometheus1400/Website2.0/blob/master/index.css">
   </head>
   <body style="background-color:lightgray;">
   <script src="index.js"></script>
