--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="content" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
         You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a>
+    	<embed src="Resume.pdf" width="500" height="375" type="application/pdf">
     </div>
     <div class="content" id="Contact Info" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
