--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <p>
         <img src="https://lh3.googleusercontent.com/-RsuZiYwyAbM/AAAAAAAAAAI/AAAAAAAAAAA/M9AfPTlwps0/s128-c-k/photo.jpg" alt="Profile Picture" height="108" width="108">
         </p>
+        <div class ="parent">
         <div class="tab">
             <button class="HeaderButton active" onclick="OpenTab(event,'About Me')" id="defaultopen">About Me</button>
             <button class="HeaderButton" onclick="OpenTab(event,'Resume')">Resume</button>
             <button class="HeaderButton" onclick="OpenTab(event,'Contact Info')">Contact Info</button>
+        </div>
         </div>
     </h2>
 
