--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Kaleb's Website</title>
@@ -20,7 +21,7 @@
 
     <div class="content" id="About Me" style="display:block">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        Hello! My name is Kaleb Dickerson, and I am a 19 year old Chemical Engineering student at Texas A&M University.
+        Hello! My name is Kaleb Dickerson, and I am a 19 year old Computer Science student at Texas A&M University.
         You may notice this website is a little bit rough, but that is because I made it myself!
     </div>
     <div class="content" id="Resume" style="display:none">
