--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Kaleb's Website</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
   </head>
-  <body style="background-color:lightgray;">
+  <body>
   <script src="index.js"></script>
     <h2>Welcome To My Website!
         <p>
         <img src="https://lh3.googleusercontent.com/-RsuZiYwyAbM/AAAAAAAAAAI/AAAAAAAAAAA/M9AfPTlwps0/s128-c-k/photo.jpg" alt="Profile Picture" height="108" width="108">
         </p>
+        <div class ="parent">
         <div class="tab">
-            <button class="HeaderButton" onclick="OpenTab(event,'About Me')" id="defaultopen">About Me</button>
+            <button class="HeaderButton active" onclick="OpenTab(event,'About Me')" id="defaultopen">About Me</button>
             <button class="HeaderButton" onclick="OpenTab(event,'Resume')">Resume</button>
             <button class="HeaderButton" onclick="OpenTab(event,'Contact Info')">Contact Info</button>
+        </div>
         </div>
     </h2>
 
     <div class="content" id="About Me" style="display:block">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        Hello! My name is Kaleb Dickerson, and I am a 19 year old Chemical Engineering student at Texas A&M University.
+        Hello! My name is Kaleb Dickerson, and I am a 19 year old Computer Science student at Texas A&M University.
         You may notice this website is a little bit rough, but that is because I made it myself!
     </div>
     <div class="content" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        You can view my resume by clicking <a href="https://drive.google.com/file/d/1wrvetXHhh3ucf2gcGvxYopAys9xBPjFD/view?usp=sharing">here</a>
-    	<embed src="Resume.pdf" width="500" height="375" type="application/pdf">
+        <embed src="Resume.pdf" width="1000" height="800" type="application/pdf">
     </div>
     <div class="content" id="Contact Info" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
