--- a/index.html
+++ b/index.html
@@ -1,47 +1,154 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Kaleb's Website</title>
-    <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-  <script src="index.js"></script>
-    <h2>Welcome To My Website!
-        <p>
-        <img src="https://lh3.googleusercontent.com/-RsuZiYwyAbM/AAAAAAAAAAI/AAAAAAAAAAA/M9AfPTlwps0/s128-c-k/photo.jpg" alt="Profile Picture" height="108" width="108">
-        </p>
-        <div class ="parent">
-        <div class="tab">
-            <button class="HeaderButton active" onclick="OpenTab(event,'About Me')" id="defaultopen">About Me</button>
-            <button class="HeaderButton" onclick="OpenTab(event,'Resume')">Resume</button>
-            <button class="HeaderButton" onclick="OpenTab(event,'Contact Info')">Contact Info</button>
-        </div>
-        </div>
-    </h2>
+<title>Kaleb's Personal Website</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+.w3-row-padding img {margin-bottom: 12px}
+.bgimg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("Profile_Picture.JPG");
+  min-height: 100%;
+}
+</style>
 
-    <div class="content" id="About Me" style="display:block">
-        <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        Hello! My name is Kaleb Dickerson, and I am a 19 year old Computer Science student at Texas A&M University.
-        You may notice this website is a little bit rough, but that is because I made it myself!
+<body>
+<script src="index.js"></script>
+<!-- Sidebar with image -->
+<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+  <div class="bgimg"></div>
+</nav>
+
+<!-- Hidden Sidebar (reveals when clicked on menu icon)-->
+<nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
+  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
+    <i class="fa fa-remove"></i>
+  </a>
+  <div class="w3-bar-block w3-center">
+    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
+    <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Portfolio</a>
+    <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">About</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
+  </div>
+</nav>
+
+<!-- Page Content -->
+<div class="w3-main w3-padding-large" style="margin-left:40%">
+
+  <!-- Menu icon to open sidebar -->
+  <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
+
+  <!-- Header -->
+  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+    <h1 class="w3-jumbo"><b>Kaleb Dickerson</b></h1>
+    <p>Student at Texas A&M University.</p>
+    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
+      <i class="fa fa-download"></i> Download Resume
+    </button>
+  </header>
+
+  <!-- Portfolio Section -->
+  <div class="w3-padding-32 w3-content" id="portfolio">
+    <h2 class="w3-text-grey">My Portfolio</h2>
+    <hr class="w3-opacity">
+
+    <!-- Grid for photos -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half">
+        <a href="https://www.github.com/Prometheus1400">View some of my projects on Github</a>
+        <!--<img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="/w3images/sailboat.jpg" style="width:100%"> -->
+      </div>
+
+      <div class="w3-half">
+        <!--<img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="/w3images/chef.jpg" style="width:100%">
+        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/p6.jpg" style="width:100%"> -->
+      </div>
+    <!-- End photo grid -->
     </div>
-    <div class="content" id="Resume" style="display:none">
+  <!-- End Portfolio Section -->
+  </div>
+
+  <!-- About Section -->
+  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+    <h2>About</h2>
+    <hr class="w3-opacity">
+    <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer science student at Texas A&M University.
+    </p>
+    <h3 class="w3-padding-16">My Skills</h3>
+    <p class="w3-wide">Python</p>
+    <div class="w3-light-grey">
+      <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:95%">95%</div>
+    </div>
+    <p class="w3-wide">C++</p>
+    <div class="w3-light-grey">
+      <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
+    </div>
+    <p class="w3-wide">Javascript</p>
+    <div class="w3-light-grey">
+      <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:80%">80%</div>
+    </div><br>
+
+
+    <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
+View Resume
+    </button>
+     <div class="In_Page_Resume" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
         <embed src="Resume.pdf" width="1000" height="800" type="application/pdf">
+    
+  <!-- End About Section -->
+  </div>
+
+  <!-- Contact Section -->
+  <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
+    <h2>Contact Me</h2>
+    <hr class="w3-opacity">
+
+    <div class="w3-section">
+      <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p>
+      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: prometheus1400@gmail.com</p>
     </div>
-    <div class="content" id="Contact Info" style="display:none">
-        <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        Here is my contact info. Please feel free to contact me!
-        <ul>
-            <li>Phone number: (512)-801-1561</li>
-            <li>Email: Prometheus1400@gmail.com</li>
-        </ul>
-    </div>
-    <div id="Footer">
-    <p>
-    This is all still a work in progress
-	<br>
-    <em>Last updated 05/10/20</em>
-    </p>
-    </div>
-  </body>
+    
+  <!-- End Contact Section -->
+  </div>  
+  
+  <!-- Footer -->
+  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <!-- End footer -->
+  </footer>
+  
+<!-- END PAGE CONTENT -->
+</div>
+
+<script>
+// Open and close sidebar
+function openNav() {
+  document.getElementById("mySidebar").style.width = "60%";
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function closeNav() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
+</body>
 </html>
