--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Student at Texas A&M University.</p>
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
+    <form method="get" action="Resume.pdf">
+    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
       <i class="fa fa-download"></i> Download Resume
-    </button>
+    </button></form>
   </header>
 
   <!-- Portfolio Section -->
@@ -62,8 +63,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
-      <div class="w3-half">
-        <a href="https://www.github.com/Prometheus1400">View some of my projects on Github</a>
+      <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+
+        <p>View some of my projects on
+        <a href="https://www.github.com/Prometheus1400">Github</a></p>
         <!--<img src="/w3images/wedding.jpg" style="width:100%">
         <img src="/w3images/rocks.jpg" style="width:100%">
         <img src="/w3images/sailboat.jpg" style="width:100%"> -->
