--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <hr class="w3-opacity">
     <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer science student at Texas A&M University.
     </p>
-    <h3 class="w3-padding-16">My Skills</h3>
+    <h3 class="w3-padding-16">Language Experience</h3>
     <p class="w3-wide">Python</p>
     <div class="w3-light-grey">
       <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:95%">95%</div>
