--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-padding-16">Language Experience</h3>
     <p class="w3-wide">Python</p>
     <div class="w3-light-grey">
-      <div class="w3-container w3-left-align w3-padding-small w3-light-green" style="width:95%">Advanced</div>
+      <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:95%">Advanced</div>
     </div>
     <p class="w3-wide">C++</p>
     <div class="w3-light-grey">
-      <div class="w3-container w3-left-align w3-padding-small w3-light-green" style="width:85%">Advanced</div>
+      <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:85%">Advanced</div>
     </div>
     <p class="w3-wide">Javascript</p>
     <div class="w3-light-grey">
-      <div class="w3-container w3-left-align w3-padding-small w3-yellow" style="width:80%">Intermediary</div>
+      <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:80%">Intermediary</div>
     </div><br>
 
 
