added to about me

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>About</h2>
     <hr class="w3-opacity">
     <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer science student at Texas A&M University.
+      I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite language is python but I also consider myself proficient in C++ and javascript.
     </p>
     <h3 class="w3-padding-16">Language Experience</h3>
     <p class="w3-wide">Python</p>
@@ -136,22 +137,10 @@ View Resume
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer -->
+  <!-- End footer --><div class="w3-opacity"><p>last update 8/12/2020</p></div>
   </footer>
   
 <!-- END PAGE CONTENT -->
 </div>
-
-<script>
-// Open and close sidebar
-function openNav() {
-  document.getElementById("mySidebar").style.width = "60%";
-  document.getElementById("mySidebar").style.display = "block";
-}
-
-function closeNav() {
-  document.getElementById("mySidebar").style.display = "none";
-}
-</script>
 </body>
 </html>
