added linkedin link

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ View Resume
       <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p>
       <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p>
       <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: prometheus1400@gmail.com</p>
+      <p><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My <a href="https://www.linkedin.com/in/kaleb-dickerson-8558ba197">LinkedIn</a></p>
     </div>
     
   <!-- End Contact Section -->
