--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@ View Resume
   </div>  
   
   <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
+  <footer class=" w3-padding-16 w3-light-grey w3-center w3-opacity w3-medium" style="margin:-10px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-snapchat w3-hover-opacity"></i>
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div class="w3-opacity"><p>last update 8/12/2020</p></div>
+  <!-- End footer --><div><p>last update 8/18/2020</p></div>
   </footer>
   
 <!-- END PAGE CONTENT -->
