--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Student at Texas A&M University.</p>
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <form method="get" action="Resume.pdf">
+    <form method="get" action="Resume2.0.pdf">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
       <i class="fa fa-download"></i> Download Resume
     </button></form>
@@ -110,8 +110,8 @@ View Resume
     </button>
      <div class="In_Page_Resume" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        <embed src="Resume.pdf" width="1000" height="800" type="application/pdf">
-    
+        <embed src="Resume2.0.pdf" width="1000" height="800" type="application/pdf">
+
   <!-- End About Section -->
   </div>
 
@@ -126,10 +126,10 @@ View Resume
       <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: prometheus1400@gmail.com</p>
       <p><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My <a href="https://www.linkedin.com/in/kaleb-dickerson-8558ba197">LinkedIn</a></p>
     </div>
-    
+
   <!-- End Contact Section -->
-  </div>  
-  
+  </div>
+
   <!-- Footer -->
   <footer class=" w3-padding-16 w3-light-grey w3-center w3-opacity w3-medium" style="margin:-10px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -138,9 +138,9 @@ View Resume
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div><p>last update 8/18/2020</p></div>
+  <!-- End footer --><div><p>last update 10/7/2020</p></div>
   </footer>
-  
+
 <!-- END PAGE CONTENT -->
 </div>
 </body>
