changed fav languages

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>About</h2>
     <hr class="w3-opacity">
     <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer science student at Texas A&M University.
-      I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite language is python but I also consider myself proficient in C++ and javascript.
+      I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++ and Python.
     </p>
     <h3 class="w3-padding-16">Language Experience</h3>
     <p class="w3-wide">Python</p>
