--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>About</h2>
     <hr class="w3-opacity">
     <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer science student at Texas A&M University.
-      I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++ and Python.
+      I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++, Python, and Javascript.
     </p>
     <h3 class="w3-padding-16">Language Experience</h3>
+    <p class="w3-wide">C/C++</p>
+  <!-- <div class="w3-light-grey"> -->
+      <!-- <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:95%">Advanced</div>
+    </div> -->
     <p class="w3-wide">Python</p>
-    <div class="w3-light-grey">
-      <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:95%">Advanced</div>
-    </div>
-    <p class="w3-wide">C++</p>
-    <div class="w3-light-grey">
+    <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:85%">Advanced</div>
-    </div>
+    </div> -->
     <p class="w3-wide">Javascript</p>
-    <div class="w3-light-grey">
+    <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:80%">Intermediary</div>
-    </div><br>
+    </div><br> -->
 
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
