removed computer science claim

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer science student at Texas A&M University.
+    <p>Hello! I'm so glad that you have decided to visit my website! I am currently a student at Texas A&M University.
       I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++, Python, and Javascript.
     </p>
     <h3 class="w3-padding-16">Language Experience</h3>
