--- a/index.html
+++ b/index.html
@@ -132,13 +132,14 @@ View Resume
 
   <!-- Footer -->
   <footer class=" w3-padding-16 w3-light-grey w3-center w3-opacity w3-medium" style="margin:-10px">
+    <p>adapted HTML/CSS template from W3Schools.com</p>
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-snapchat w3-hover-opacity"></i>
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div><p>last update 12/7/2020</p><p>adapted template from W3Schools.com</p></div>
+  <!-- End footer --><div><p>last update 12/14/2020</p></div>
   </footer>
 
 <!-- END PAGE CONTENT -->
