added typescript and node to languages

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:85%">Advanced</div>
     </div> -->
-    <p class="w3-wide">Javascript</p>
+    <p class="w3-wide">Javascript / Typescript / Node</p>
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:80%">Intermediary</div>
     </div><br> -->
