updated skills section

--- a/index.html
+++ b/index.html
@@ -87,19 +87,20 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>Hello! I'm so glad that you have decided to visit my website! I am currently a student at Texas A&M University.
+    <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer engineering student at Texas A&M University.
       I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++, Python, and Javascript.
     </p>
-    <h3 class="w3-padding-16">Language Experience</h3>
+    <h3 class="w3-padding-16">Skills</h3>
     <p class="w3-wide">C/C++</p>
   <!-- <div class="w3-light-grey"> -->
       <!-- <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:95%">Advanced</div>
     </div> -->
-    <p class="w3-wide">Python</p>
+    <p class="w3-wide">Python and R</p>
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:85%">Advanced</div>
     </div> -->
-    <p class="w3-wide">Javascript / Node</p>
+    <p class="w3-wide">Node.js</p>
+    <p class="w3-wide">Modeling Circuits in LTspice/Multisim</p>
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:80%">Intermediary</div>
     </div><br> -->
@@ -139,7 +140,7 @@ View Resume
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div><p>last update 1/1/2021</p></div>
+  <!-- End footer --><div><p>last update 3/3/2021</p></div>
   </footer>
 
 <!-- END PAGE CONTENT -->
