--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Student at Texas A&M University.</p>
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <form method="get" action="Resume2.0.pdf">
+    <form method="get" action="Resume4.0.pdf">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
       <i class="fa fa-download"></i> Download Resume
     </button></form>
@@ -87,20 +87,21 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>Hello! I'm so glad that you have decided to visit my website! I am currently a computer engineering student at Texas A&M University.
+    <p>Hello! I'm so glad that you have decided to visit my website! I am currently an honors computer science student at Texas A&M University set to graduate in 2023.
       I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++, Python, and Javascript.
+      Recently I have been doing work in machine learning and graph nueral networks using PyTorch.
     </p>
     <h3 class="w3-padding-16">Skills</h3>
     <p class="w3-wide">C/C++</p>
   <!-- <div class="w3-light-grey"> -->
       <!-- <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:95%">Advanced</div>
     </div> -->
-    <p class="w3-wide">Python and R</p>
+    <p class="w3-wide">Python</p>
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:85%">Advanced</div>
     </div> -->
     <p class="w3-wide">Node.js</p>
-    <p class="w3-wide">Modeling Circuits in LTspice/Multisim</p>
+    <p class="w3-wide">Machine Learning</p>
     <!-- <div class="w3-light-grey">
       <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:80%">Intermediary</div>
     </div><br> -->
@@ -111,7 +112,7 @@ View Resume
     </button>
      <div class="In_Page_Resume" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        <embed src="Resume2.0.pdf" width="1000" height="800" type="application/pdf">
+        <embed src="Resume4.0.pdf" width="1000" height="800" type="application/pdf">
 
   <!-- End About Section -->
   </div>
