added comment about KDD cup

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
 
-        <p>View some of my projects on
-        <a href="https://www.github.com/Prometheus1400">Github</a></p>
+        <p>View some of my projects on 
+        <a href="https://www.github.com/Prometheus1400">Github</a>
+        such as the graph regression task in the 2021 KDD cup on the PCQM4M-LSC dataset.</p>
         <!--<img src="/w3images/wedding.jpg" style="width:100%">
         <img src="/w3images/rocks.jpg" style="width:100%">
         <img src="/w3images/sailboat.jpg" style="width:100%"> -->
@@ -141,7 +142,7 @@ View Resume
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div><p>last update 3/3/2021</p></div>
+  <!-- End footer --><div><p>last update 6/16/2021</p></div>
   </footer>
 
 <!-- END PAGE CONTENT -->
