--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Student at Texas A&M University.</p>
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <form method="get" action="Resume6.0.pdf">
+    <form method="get" action="Resume_KalebDickerson2021.pdf">
     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
       <i class="fa fa-download"></i> Download Resume
     </button></form>
@@ -113,7 +113,7 @@ View Resume
     </button>
      <div class="In_Page_Resume" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        <embed src="Resume6.0.pdf" width="1000" height="800" type="application/pdf">
+        <embed src="Resume_KalebDickerson2021.pdf" width="1000" height="800" type="application/pdf">
 
   <!-- End About Section -->
   </div>
