updated main page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header -->
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
     <h1 class="w3-jumbo"><b>Kaleb Dickerson</b></h1>
-    <p>Student at Texas A&M University.</p>
+    <p>Honors computer science student, undergraduate researcher, and peer teacher at Texas A&M University.</p>
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
     <form method="get" action="Resume_KalebDickerson2021.pdf">
@@ -57,55 +57,42 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </header>
 
   <!-- Portfolio Section -->
-  <div class="w3-padding-32 w3-content" id="portfolio">
+<!--   <div class="w3-padding-32 w3-content" id="portfolio">
     <h2 class="w3-text-grey">My Portfolio</h2>
-    <!--<hr class="w3-opacity">-->
 
-    <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
 
         <p>View some of my projects on 
         <a href="https://www.github.com/Prometheus1400">Github</a>
         such as the graph regression task in the 2021 KDD cup on the PCQM4M-LSC dataset.</p>
-        <!--<img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/sailboat.jpg" style="width:100%"> -->
+
       </div>
 
       <div class="w3-half">
-        <!--<img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/chef.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/p6.jpg" style="width:100%"> -->
+
       </div>
-    <!-- End photo grid -->
     </div>
-  <!-- End Portfolio Section -->
-  </div>
+  </div> -->
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
     <p>Hello! I'm so glad that you have decided to visit my website! I am currently an honors computer science student at Texas A&M University set to graduate in 2023.
-      I love computers and programming, and it is my favorite thing to learn and do in my free time. My favorite languages are C/C++, Python, and Javascript.
-      Recently I have been doing work in machine learning and graph nueral networks using PyTorch.
+      I'm also a peer teacher and really enjoy helping others understand how to solve complex coding problems.
+      Recently I have been doing undergraduate research work in machine learning and graph nueral networks using PyTorch.
     </p>
-    <h3 class="w3-padding-16">Skills</h3>
+    <p>
+      Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! I'm also an avid fantasy reader, if you've never heard of 
+      The Stormlight Archives series by Brandon Sanderson you're missing out.
+    </p>
+<!--     <h3 class="w3-padding-16">Skills</h3>
     <p class="w3-wide">C/C++</p>
-  <!-- <div class="w3-light-grey"> -->
-      <!-- <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:95%">Advanced</div>
-    </div> -->
     <p class="w3-wide">Python</p>
-    <!-- <div class="w3-light-grey">
-      <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:85%">Advanced</div>
-    </div> -->
     <p class="w3-wide">Node.js</p>
-    <p class="w3-wide">Machine Learning</p>
-    <!-- <div class="w3-light-grey">
-      <div class="w3-container w3-left-align w3-padding-small w3-dark-grey" style="width:80%">Intermediary</div>
-    </div><br> -->
+    <p class="w3-wide">Machine Learning</p> -->
+
 
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
