cleaned up page

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! I'm also an avid fantasy reader, if you've never heard of 
       The Stormlight Archives series by Brandon Sanderson you're missing out.
     </p>
+    <p>
+      Please check out some of my projects on <a href="https://www.github.com/Prometheus1400">GitHub</a> such as the tetris game I coded in C++, or my deep learning model designed for the 2021 KDD Cup. 
+      Feel free to look at my resume and contact me (email is probably best).
+    </p>
 <!--     <h3 class="w3-padding-16">Skills</h3>
     <p class="w3-wide">C/C++</p>
     <p class="w3-wide">Python</p>
@@ -95,12 +99,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 
-    <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
+<!--     <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
 View Resume
     </button>
      <div class="In_Page_Resume" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-        <embed src="Resume_KalebDickerson2021.pdf" width="1000" height="800" type="application/pdf">
+        <embed src="Resume_KalebDickerson2021.pdf" width="1000" height="800" type="application/pdf"> -->
 
   <!-- End About Section -->
   </div>
@@ -113,7 +117,7 @@ View Resume
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p>
       <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p>
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: prometheus1400@gmail.com</p>
+      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: kaleb.dickerson2001@tamu.edu</p>
       <p><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My <a href="https://www.linkedin.com/in/kaleb-dickerson-8558ba197">LinkedIn</a></p>
     </div>
 
@@ -129,7 +133,7 @@ View Resume
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div><p>last update 6/16/2021</p></div>
+  <!-- End footer --><div><p>last update 8/31/2021</p></div>
   </footer>
 
 <!-- END PAGE CONTENT -->
