--- a/index.html
+++ b/index.html
@@ -1,63 +1,79 @@
 <!DOCTYPE html>
 <html>
-<title>Kaleb's Personal Website</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-.bgimg {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url("Me.JPG");
-  min-height: 100%;
-}
-</style>
+    <title>Kaleb's Personal Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <style>
+        body,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: "Montserrat", sans-serif;
+        }
+        .w3-row-padding img {
+            margin-bottom: 12px;
+        }
+        .bgimg {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-image: url("Me.JPG");
+            min-height: 100%;
+        }
+    </style>
 
-<body>
-<script src="index.js"></script>
-<!-- Sidebar with image -->
-<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-  <div class="bgimg"></div>
-</nav>
+    <body>
+        <script src="index.js"></script>
+        <!-- Sidebar with image -->
+        <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width: 40%">
+            <div class="bgimg"></div>
+        </nav>
 
-<!-- Hidden Sidebar (reveals when clicked on menu icon) -->
-<nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
-  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
-    <i class="fa fa-remove"></i>
-  </a>
-  <div class="w3-bar-block w3-center">
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
-    <!-- <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Portfolio</a> -->
-    <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">About</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
-  </div>
-</nav>
+        <!-- Hidden Sidebar (reveals when clicked on menu icon) -->
+        <nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display: none; padding-top: 150px; right: 0; z-index: 2" id="mySidebar">
+            <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding: 0 12px">
+                <i class="fa fa-remove"></i>
+            </a>
+            <div class="w3-bar-block w3-center">
+                <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
+                <!-- <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Portfolio</a> -->
+                <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">About</a>
+                <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
+            </div>
+        </nav>
 
-<!-- Page Content -->
-<div class="w3-main w3-padding-large" style="margin-left:40%">
+        <!-- Page Content -->
+        <div class="w3-main w3-padding-large" style="margin-left: 40%">
+            <!-- Menu icon to open sidebar -->
+            <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width: auto; right: 0" onclick="openNav()"
+                ><i class="fa fa-bars"></i
+            ></span>
 
-  <!-- Menu icon to open sidebar -->
-  <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
+            <!-- Header -->
+            <header class="w3-container w3-center" style="padding: 128px 16px" id="home">
+                <h1 class="w3-jumbo"><b>Kaleb Dickerson</b></h1>
+                <p>Honors computer science student, undergraduate researcher, and peer teacher at Texas A&M University.</p>
+                <img
+                    src="/w3images/profile_girl.jpg"
+                    class="w3-image w3-hide-large w3-hide-small w3-round"
+                    style="display: block; width: 60%; margin: auto"
+                />
+                <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333" />
+                <form method="get" action="Resume_KalebDickerson2021.pdf">
+                    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
+                        <i class="fa fa-download"></i> Download Resume
+                    </button>
+                </form>
+            </header>
 
-  <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <h1 class="w3-jumbo"><b>Kaleb Dickerson</b></h1>
-    <p>Honors computer science student, undergraduate researcher, and peer teacher at Texas A&M University.</p>
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <form method="get" action="Resume_KalebDickerson2021.pdf">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
-      <i class="fa fa-download"></i> Download Resume
-    </button></form>
-  </header>
-
-  <!-- Portfolio Section -->
-<!--   <div class="w3-padding-32 w3-content" id="portfolio">
+            <!-- Portfolio Section -->
+            <!--   <div class="w3-padding-32 w3-content" id="portfolio">
     <h2 class="w3-text-grey">My Portfolio</h2>
 
     <div class="w3-row-padding" style="margin:0 -16px">
@@ -75,68 +91,72 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
   </div> -->
 
-  <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
-    <h2>About</h2>
-    <hr class="w3-opacity">
-    <p>Hello! I'm so glad that you have decided to visit my website! I am currently an honors computer science student at Texas A&M University set to graduate in 2023.
-      I'm also a peer teacher and really enjoy helping others understand how to solve complex coding problems.
-      Recently I have been doing undergraduate research work in machine learning and graph nueral networks using PyTorch.
-    </p>
-    <p>
-      Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! I'm also an avid fantasy reader, if you've never heard of 
-      The Stormlight Archives series by Brandon Sanderson you're missing out.
-    </p>
-    <p>
-      Please check out some of my projects on <a href="https://www.github.com/Prometheus1400">GitHub</a> such as the tetris game I coded in C++, or my deep learning model designed for the 2021 KDD Cup. 
-      Feel free to look at my resume and contact me (email is probably best).
-    </p>
-<!--     <h3 class="w3-padding-16">Skills</h3>
+            <!-- About Section -->
+            <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+                <h2>About</h2>
+                <hr class="w3-opacity" />
+                <p>
+                    Hello! I'm so glad that you have decided to visit my website! I am currently an honors computer science student at Texas A&M
+                    University set to graduate in 2023. I'm also a peer teacher and really enjoy helping others understand how to solve complex coding
+                    problems. Recently I have been doing undergraduate research work in machine learning and graph nueral networks using PyTorch.
+                </p>
+                <p>
+                    Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! I'm also an avid fantasy
+                    reader, if you've never heard of The Stormlight Archives series by Brandon Sanderson you're missing out.
+                </p>
+                <p>
+                    Please check out some of my projects on <a href="https://www.github.com/Prometheus1400">GitHub</a> such as the tetris game I coded
+                    in C++, or my deep learning model designed for the 2021 KDD Cup. Feel free to look at my resume and contact me (email is probably
+                    best).
+                </p>
+                <!--     <h3 class="w3-padding-16">Skills</h3>
     <p class="w3-wide">C/C++</p>
     <p class="w3-wide">Python</p>
     <p class="w3-wide">Node.js</p>
     <p class="w3-wide">Machine Learning</p> -->
 
-
-
-<!--     <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
+                <!--     <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Toggle_Resume()">
 View Resume
     </button>
      <div class="In_Page_Resume" id="Resume" style="display:none">
         <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
         <embed src="Resume_KalebDickerson2021.pdf" width="1000" height="800" type="application/pdf"> -->
 
-  <!-- End About Section -->
-  </div>
+                <!-- End About Section -->
+            </div>
 
-  <!-- Contact Section -->
-  <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
-    <h2>Contact Me</h2>
-    <hr class="w3-opacity">
+            <!-- Contact Section -->
+            <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom: 64px">
+                <h2>Contact Me</h2>
+                <hr class="w3-opacity" />
 
-    <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p>
-      <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p>
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: kaleb.dickerson2001@tamu.edu</p>
-      <p><i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My <a href="https://www.linkedin.com/in/kaleb-dickerson-8558ba197">LinkedIn</a></p>
-    </div>
+                <div class="w3-section">
+                    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p>
+                    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p>
+                    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: kaleb.dickerson2001@tamu.edu</p>
+                    <p>
+                        <i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My
+                        <a href="https://www.linkedin.com/in/kaleb-dickerson2023">LinkedIn</a>
+                    </p>
+                </div>
 
-  <!-- End Contact Section -->
-  </div>
+                <!-- End Contact Section -->
+            </div>
 
-  <!-- Footer -->
-  <footer class=" w3-padding-16 w3-light-grey w3-center w3-opacity w3-medium" style="margin:-10px">
-    <p>adapted HTML/CSS template from W3Schools.com</p>
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer --><div><p>last update 8/31/2021</p></div>
-  </footer>
+            <!-- Footer -->
+            <footer class="w3-padding-16 w3-light-grey w3-center w3-opacity w3-medium" style="margin: -10px">
+                <p>adapted HTML/CSS template from W3Schools.com</p>
+                <i class="fa fa-facebook-official w3-hover-opacity"></i>
+                <i class="fa fa-instagram w3-hover-opacity"></i>
+                <i class="fa fa-snapchat w3-hover-opacity"></i>
+                <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+                <i class="fa fa-twitter w3-hover-opacity"></i>
+                <i class="fa fa-linkedin w3-hover-opacity"></i>
+                <!-- End footer -->
+                <div><p>last update 8/31/2021</p></div>
+            </footer>
 
-<!-- END PAGE CONTENT -->
-</div>
-</body>
+            <!-- END PAGE CONTENT -->
+        </div>
+    </body>
 </html>
