--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- Header -->
             <header class="w3-container w3-center" style="padding: 128px 16px" id="home">
                 <h1 class="w3-jumbo"><b>Kaleb Dickerson</b></h1>
-                <p>Honors computer science student, undergraduate researcher, and peer teacher at Texas A&M University.</p>
+                <p>Honors computer science student and peer teacher at Texas A&M University.</p>
                 <img
                     src="/w3images/profile_girl.jpg"
                     class="w3-image w3-hide-large w3-hide-small w3-round"
@@ -98,14 +98,16 @@
                 <p>
                     Hello! I'm so glad that you have decided to visit my website! I am currently an honors computer science student at Texas A&M
                     University set to graduate in 2023. I'm also a peer teacher and really enjoy helping others understand how to solve complex coding
-                    problems. Recently I have been doing undergraduate research work in machine learning and graph nueral networks using PyTorch.
+                    problems. Recently I competed in a hackathon where my team won the "Judge's Choice" award. We developed a full stack web application 
+                    using Django and React which detected the user's mood using machine learning and played a song fitting that mood in the UI. You can check
+                    out the project <a href="https://github.com/fool1280/howdy-hack-2021">here</a>.
                 </p>
                 <p>
                     Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! I'm also an avid fantasy
                     reader, if you've never heard of The Stormlight Archives series by Brandon Sanderson you're missing out.
                 </p>
                 <p>
-                    Please check out some of my projects on <a href="https://www.github.com/Prometheus1400">GitHub</a> such as the tetris game I coded
+                    Please check out some of my other projects on <a href="https://www.github.com/Prometheus1400">GitHub</a> such as the tetris game I coded
                     in C++, or my deep learning model designed for the 2021 KDD Cup. Feel free to look at my resume and contact me (email is probably
                     best).
                 </p>
