--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     style="display: block; width: 60%; margin: auto"
                 />
                 <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333" />
-                <form method="get" action="Resume_KalebDickerson2021.pdf">
+                <form method="get" action="Kaleb_Dickerson_Resume.pdf">
                     <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="submit">
-                        <i class="fa fa-download"></i> Download Resume
+                        <i class="fa fa-download"></i> View Resume
                     </button>
                 </form>
             </header>
@@ -96,11 +96,12 @@
                 <h2>About</h2>
                 <hr class="w3-opacity" />
                 <p>
-                    Hello! I'm so glad that you have decided to visit my website! I am currently an honors computer science student at Texas A&M
+                    Hello! Welcome to my corner of the internet! I am currently an honors computer science student at Texas A&M
                     University set to graduate in 2023. I'm also a peer teacher and really enjoy helping others understand how to solve complex coding
-                    problems. Recently I competed in a hackathon where my team won the "Judge's Choice" award. We developed a full stack web application 
-                    using Django and React which detected the user's mood using machine learning and played a song fitting that mood in the UI. You can check
-                    out the project <a href="https://github.com/fool1280/howdy-hack-2021">here</a>.
+                    problems. This past summer I completed an internship at IBM where I was working on IBM Cloud. I gained a lot of experience in cloud 
+                    models and arhitecture, as well as essential cloud technologies such as Docker and Kubernetes. Last year I competed in a hackathon where my 
+                    team won the "Judge's Choice" award. We developed a full stack web application using Django and React which detected the user's mood using 
+                    machine learning and played a song fitting that mood in the UI. You can check out the project <a href="https://github.com/fool1280/howdy-hack-2021">here</a>.
                 </p>
                 <p>
                     Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! I'm also an avid fantasy
@@ -147,15 +148,15 @@ View Resume
 
             <!-- Footer -->
             <footer class="w3-padding-16 w3-light-grey w3-center w3-opacity w3-medium" style="margin: -10px">
-                <p>adapted HTML/CSS template from W3Schools.com</p>
+                <!-- <p>adapted HTML/CSS template from W3Schools.com</p>
                 <i class="fa fa-facebook-official w3-hover-opacity"></i>
                 <i class="fa fa-instagram w3-hover-opacity"></i>
                 <i class="fa fa-snapchat w3-hover-opacity"></i>
                 <i class="fa fa-pinterest-p w3-hover-opacity"></i>
                 <i class="fa fa-twitter w3-hover-opacity"></i>
-                <i class="fa fa-linkedin w3-hover-opacity"></i>
+                <i class="fa fa-linkedin w3-hover-opacity"></i> -->
                 <!-- End footer -->
-                <div><p>last update 8/31/2021</p></div>
+                <div><p>last update 9/7/2022</p></div>
             </footer>
 
             <!-- END PAGE CONTENT -->
