--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
                 Dickerson</b></h1>
         <p class="flex justify-center opacity-0 transition-opacity duration-1000 fade-in">Sofware Engineer
             at Apple in Austin, Texas</p>
-        <form class="flex justify-center" method="get" action="static/Kaleb_Dickerson_Resume.pdf">
+        <form class="flex justify-center" method="get" action="static/Resume.pdf">
             <button
                 class="hover:animate-pulse bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center opacity-0 transition-opacity duration-1000 fade-in">
                 <span>View Resume</span>
