--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                             <div id="home-selector" hx-get="home.html" hx-target="#page" hx-trigger="load,click" class="rounded-md px-3 py-2 text-sm font-medium text-orange-300 hover:bg-gray-700 hover:text-white">Home</div>
                             <div id="about-selector" hx-get="about.html" hx-target="#page" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">About</div>
-                            <div class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</div>
+                            <div id="projects-selector" hx-get="projects.html" hx-target="#page" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</div>
                         </div>
                     </div>
                 </div>
