--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,8 @@
 <div id="home" class="flex flex-row justify-center h-screen ">
     <div class="w-2/4 flex flex-col gap-5 items-center justify-center p-32">
-        <h1 class="flex justify-center text-6xl opacity-0 transition-opacity duration-1000 fade-in"><b>Coming Soon!</b></h1>
+        <h1 class="flex justify-center text-6xl opacity-0 transition-opacity duration-1000 fade-in"><b>Coming Soon!</b>
+        </h1>
+        <p class="opacity-0 transition-opacity duration-1000 fade-in">In the meantime please check out my resume and
+            github for personal projects.</p>
     </div>
 </div>
