--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <tr><td class="px-6 py-4 text-ctp-subtext0 font-medium">Terminal</td><td class="px-6 py-4 text-ctp-text"><span class="text-ctp-mauve">●</span> Ghostty</td></tr>
                         <tr class="bg-ctp-base/50"><td class="px-6 py-4 text-ctp-subtext0 font-medium">Font</td><td class="px-6 py-4 text-ctp-text"><span class="text-ctp-blue">●</span> JetBrains Mono</td></tr>
                         <tr><td class="px-6 py-4 text-ctp-subtext0 font-medium">OS</td><td class="px-6 py-4 text-ctp-text"><span class="text-ctp-yellow">●</span> macOS</td></tr>
-                        <tr class="bg-ctp-base/50"><td class="px-6 py-4 text-ctp-subtext0 font-medium">Shell</td><td class="px-6 py-4 text-ctp-text"><span class="text-ctp-peach">●</span> fish</td></tr>
+                        <tr class="bg-ctp-base/50"><td class="px-6 py-4 text-ctp-subtext0 font-medium">Shell</td><td class="px-6 py-4 text-ctp-text"><span class="text-ctp-peach">●</span> zsh</td></tr>
                     </tbody>
                 </table>
             </div>
@@ -152,8 +152,8 @@
                 </a>
                 <a href="https://github.com/Prometheus1400/RadiantCpp" target="_blank" class="group rounded-2xl bg-ctp-base border border-ctp-surface0 p-6 hover:border-ctp-mauve">
                     <h3 class="text-lg font-semibold text-ctp-text group-hover:text-ctp-mauve">RadiantCpp</h3>
-                    <p class="mt-3 text-sm text-ctp-subtext1">A C++ project exploring systems programming concepts.</p>
-                    <div class="mt-4 flex gap-2"><span class="rounded-full bg-ctp-mauve/20 px-2.5 py-0.5 text-xs text-ctp-mauve">C++</span></div>
+                    <p class="mt-3 text-sm text-ctp-subtext1">A programming language and compiler built from scratch in C++. Features a custom lexer, parser, and AST.</p>
+                    <div class="mt-4 flex gap-2"><span class="rounded-full bg-ctp-mauve/20 px-2.5 py-0.5 text-xs text-ctp-mauve">C++</span><span class="rounded-full bg-ctp-surface0 px-2.5 py-0.5 text-xs text-ctp-subtext0">Compiler</span></div>
                 </a>
                 <a href="https://github.com/Prometheus1400/base64_encoder" target="_blank" class="group rounded-2xl bg-ctp-base border border-ctp-surface0 p-6 hover:border-ctp-yellow">
                     <h3 class="text-lg font-semibold text-ctp-text group-hover:text-ctp-yellow">base64_encoder</h3>
